# GwongDong-SaiKoLily-The-Dice-Bot-For-TeamSpeak

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
ExternModules/ts3client-pluginsdk-26/include/teamspeak/: public_rare_definitions.h
Modules/: CMakeLists.txt
Modules/CommandCore/: CMakeLists.txt
Modules/CommandCore/include/: CommandCore.hpp
Modules/CommandCore/src/: CommandCore.cpp
Modules/GwongDongFileSystems/: CMakeLists.txt
Modules/GwongDongFileSystems/include/: GwongDongFileSystem.hpp
Modules/GwongDongFileSystems/src/: GwongDongFileSystem.cpp
Modules/Loggings/: CMakeLists.txt
Modules/Loggings/include/: loggings.hpp
Modules/Loggings/src/: loggings.cpp
Modules/Plugin_GwongDong/: CMakeLists.txt
Modules/Plugin_GwongDong/include/: Init_Plugin.hpp
Modules/Plugin_GwongDong/src/: Init_Plugin.cpp
Modules/SaiKoLily/: CMakeLists.txt
Modules/SaiKoLily/include/: CMD_SaiKoLily.hpp  SaiKoLily.hpp  SessionManager.hpp
Modules/SaiKoLily/interface/: SaiKoLilyInterface.hpp
Modules/SaiKoLily/src/: CMD_SaiKoLily.cpp  SaiKoLily.cpp  SessionManager.cpp
